--- a/jxystl/jxystl.vcxproj
+++ b/jxystl/jxystl.vcxproj
@@ -132,14 +132,23 @@
     <ClCompile Include="alloc.cpp" />
     <ClCompile Include="locks.cpp" />
     <ClCompile Include="msvcfill.cpp" />
+    <ClCompile Include="thread.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\jxy\alloc.hpp" />
+    <ClInclude Include="..\include\jxy\deque.hpp" />
+    <ClInclude Include="..\include\jxy\list.hpp" />
     <ClInclude Include="..\include\jxy\locks.hpp" />
     <ClInclude Include="..\include\jxy\map.hpp" />
     <ClInclude Include="..\include\jxy\memory.hpp" />
+    <ClInclude Include="..\include\jxy\queue.hpp" />
     <ClInclude Include="..\include\jxy\scope.hpp" />
+    <ClInclude Include="..\include\jxy\set.hpp" />
+    <ClInclude Include="..\include\jxy\stach.hpp" />
     <ClInclude Include="..\include\jxy\string.hpp" />
+    <ClInclude Include="..\include\jxy\thread.hpp" />
+    <ClInclude Include="..\include\jxy\unordered_map.hpp" />
+    <ClInclude Include="..\include\jxy\unordered_set.hpp" />
     <ClInclude Include="..\include\jxy\vector.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
