--- a/stltest/stltest.vcxproj
+++ b/stltest/stltest.vcxproj
@@ -163,6 +163,8 @@
     <ClCompile Include="string_tests.cpp" />
     <ClCompile Include="tests.cpp" />
     <ClCompile Include="thread_tests.cpp" />
+    <ClCompile Include="unordered_map_tests.cpp" />
+    <ClCompile Include="unordered_set_tests.cpp" />
     <ClCompile Include="vector_tests.cpp" />
   </ItemGroup>
   <ItemGroup>
